Scss Fix about homepage text and spacing

--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -21,13 +21,16 @@
 .homepage__title {
   font-family: "Poppins", sans-serif;
   font-size: 60px;
+  margin-bottom: 3rem;
 }
 
 .homepage__resume {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  font-size: large;
+  font-size: larger;
   text-align: center;
+  margin-bottom: 3rem;
+  width: 80%;
 }
 
 .homepage__button-create {
